modified:   mcsak.sh